image assets to objects dir

--- a/_includes/aboutsidebar.html
+++ b/_includes/aboutsidebar.html
@@ -3,17 +3,17 @@
     <div class="card-body text-center">
         <p class="mx-2 my-2">
             <a href="http://webpages.uidaho.edu/aacc/index.htm" target="_blank">
-                <img src="{{ '/assets/aacc-postcard.png' | relative_url }}" class="img-fluid" alt="Asian American Comparative Collection">
+                <img src="{{ site.objects }}/aacc-postcard.png" class="img-fluid" alt="Asian American Comparative Collection">
             </a>
         </p>
         <p class="mx-2 my-4">
             <a href="http://www.burkemuseum.org/" target="_blank">
-                <img src="{{ '/assets/burkelogo.png' | relative_url }}" class="img-fluid" alt="Burke Museum">
+                <img src="{{ site.objects }}/burkelogo.png" class="img-fluid" alt="Burke Museum">
             </a>
         </p>
         <p class="mx-2 my-2">
             <a href="https://cdil.lib.uidaho.edu/" target="_blank">
-                <img src="{{ '/assets/cdil-logo.png' | relative_url }}" class="img-fluid" alt="Center for Digital Inquiry and Learning">
+                <img src="{{ site.objects }}/cdil-logo.png" class="img-fluid" alt="Center for Digital Inquiry and Learning">
             </a>
         </p>
     </div>
