update form data

--- a/_layouts/data.html
+++ b/_layouts/data.html
@@ -18,8 +18,8 @@ layout: page
                 <a class="btn btn-primary col-md-6 col-md-offset-3" href="{{ '/data/metadata.csv' | absolute_url }}" target="_blank">CSV spreadsheet</a>
                 <br>
                 <a class="btn btn-primary col-md-6 col-md-offset-3 mt-2" href="{{ '/data/metadata.json' | absolute_url }}" target="_blank">JSON</a>
-                <!--<br>
-                <a class="btn btn-primary col-md-6 col-md-offset-3 mt-2" href="{{ "/data/subjects.json" | absolute_url }}" target="_blank">Subjects JSON</a>-->
+                <br>
+                <a class="btn btn-primary col-md-6 col-md-offset-3 mt-2" href="{{ '/data/form-tree.json' | absolute_url }}" target="_blank">Form Typology JSON</a>
             </div>
         </div>
     </div>
