update table layout

--- a/_includes/js/table-js.html
+++ b/_includes/js/table-js.html
@@ -2,14 +2,14 @@
 <script>
     $(document).ready(function() {
         $('#item-table').DataTable( {
-            ajax: { url: '{{ "/data/metadata.json" | relative_url }}', dataSrc: 'documents' },
+            ajax: { url: '{{ "/data/metadata.json" | relative_url }}', dataSrc: 'objects' },
             columns: [ { data: 'title' }, { data: 'vessel-form' }, { data: 'description' }, { data: 'catalog-number' }, { data: 'link' } ],
             columnDefs: [ 
                 { "render": function ( data, type, row ) { return '<a href="' + row.link +'">'+ data +'</a>'; },"targets": 0 },
                 { "visible": false,  "targets": [ 4 ] }
             ],
             order: [[ 1, "desc" ]],
-            dom: 'Blfrtip', 
+            dom: 'B<"row mt-2"<"col-md-6"l><"col-md-6"f>>t<"row"<"col-md-6"i><"col-md-6"p>>', 
             buttons: [ 'excelHtml5', 'csvHtml5' ]
         });
     });
