update all collections nav

--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row">
+    <div class="row align-items-center">
         <div class="col-md-9">
             <div class="row">
             <div id="title" class="col-11" >
@@ -7,11 +7,9 @@
                 <p>{{ site.tagline }}</p>
             </div></div>
         </div>
-        <div class="col-md-3 d-none d-md-block">
-            <div class="mt-md-3 float-right">
-                <a id="digleft" title="University of Idaho Library Digital Initiatives" class="btn btn-outline-light border-secondary" data-toggle="modal" data-target="#collections">
-                <img id="digleft" class="img-fluid" src="https://www.lib.uidaho.edu/digital/justdi_logo_sm.png" alt="digital initiatives logo" ></a>
-            </div>
+        <div class="col-md-3 d-none d-md-block text-right">
+            <button type="button" class="btn btn-outline-light" data-toggle="modal" data-target="#collections">
+            <img class="img-fluid" src="https://www.lib.uidaho.edu/media/digital/justdi_logo_sm.png" title="University of Idaho Library Digital Initiatives" alt="digital initiatives logo" ></button>
         </div>
     </div>
 </div>
