--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -3,8 +3,9 @@ layout: page
 ---
 {% assign items = site.data[site.metadata] %}
 
-<h1 class="text"> Search Items</h1>
-    <p class="text">Use this page to search by different attributes, such as vessel form; decoration type, method, element or color; paste type; or vessel size. To view attribute terms by frequency, visit the <a href="{{ '/subjects.html' | relative_url }}" >Subjects page</a>.</p>
+<h1 class="text">Browse Items</h1>
+
+<p class="text">Use this page to search by different attributes, such as vessel form; decoration type, method, element or color; paste type; or vessel size. To view attribute terms by frequency, visit the <a href="{{ '/subjects.html' | relative_url }}" >Subjects page</a>.</p>
 
 <h2 class="text-center">
     <input type="text" id="quicksearch" placeholder=" Filter ... " > 
