--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -1,57 +1,26 @@
 ---
 layout: page 
+lazyload: true
 ---
-{% assign items = site.data[site.metadata] %}
+{% assign itemCount = site.data[site.metadata] | size %}
 
-<h1 class="text">Browse Items</h1>
+{{ content }}
 
-<p class="text">Use this page to search by different attributes, such as vessel form; decoration type, method, element or color; paste type; or vessel size. To view attribute terms by frequency, visit the <a href="{{ '/subjects.html' | relative_url }}" >Subjects page</a>.</p>
-
-<h2 class="text-center">
-    <input type="text" id="quicksearch" placeholder=" Filter ... " > 
-    <input class="btn btn-pride-gold align-top" title="Search" type="submit" value="Go" alt="Search" id="goButton" onclick="filterItems()"> 
-    <a class="btn btn-secondary align-top filter" href="#" data-filter="">Reset</a>
-    <br class="hidden-md-up">
-    <span class="info2"><span id="numberof">{{ items | size }}</span> of {{ items | size }} items</span>
-</h2>
-
-<div class="row" id="browse-items">
-    {% for item in items %}
-    <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-2">
-    <div class="card" >
-        <a href="{{ '/data/' | absolute_url | append: item.object-id | append: '.html' }}">
-            {% assign images = site.data.hjccc_images | where: "object-id", item.object-id | first %}
-            <img class="card-img-top lazy" {% if forloop.index < 20 %}src{% else %}data-original{% endif %}="{{ site.objects }}/{{ images.identifier }}_th.jpg" alt="{{ item.title | escape }}">
-        </a>
-        <div class="card-body">
-            <h4 class="card-title">{{ item.title }}</h4>
-            {% assign facets = "functional-category;material;vessel-form" | split: ";" %}
-            <p>
-            {% for f in facets %}
-                <a class="btn btn-sm btn-clearwater m-1 filter" data-filter="{{ item[f] | trim |escape }}" href="{{ item[f] | trim | uri_escape | prepend: '/browse.html#' | relative_url }}">{{ item[f] }}</a> 
-            {% endfor %} 
-            </p>
-            <p class="card-text"><strong>Decoration Type: </strong>{{ item.decoration-type }}</p>
-            <p class="card-text"><strong>Description: </strong>{{ item.description | truncatewords: 20 }}</p>
-            <p class="card-text"><strong>Source: </strong>{{ item.source }}</p>
-            <p class="card-text"><strong>Catalog Number: </strong>{{ item.catalog-number }}</p>
-            <p class="d-none card-text">{{ item.subjects }}</p>
-            <p class="d-none card-text">{{ item.artifact-dimensions}}</p>
-            <p class="d-none card-text">{{ item.site-location}}</p>
-            <p class="d-none card-text">{{ item.site-date}}</p>
-            <p class="d-none card-text">{{ item.pigment-application}}</p>
-            <p class="d-none card-text">{{ item.exterior-decoration-method}}</p>
-            <p class="d-none card-text">{{ item.exterior-decoration-color}}</p>
-            <p class="d-none card-text">{{ item.exterior-decoration-elements}}</p>
-            <p class="d-none card-text">{{ item.interior-decoration-method}}</p>
-            <p class="d-none card-text">{{ item.interior-decoration-color}}</p>
-            <p class="d-none card-text">{{ item.interior-decoration-elements}}</p>
-            <p class="d-none card-text">{{ item.marks}}</p>
-            <p>
-                <a href="{{ '/data/' | absolute_url | append: item.object-id | append: '.html' }}" class="btn btn-pride-gold" title="link to {{ item.title | escape }}">View Item</a>
-            </p>
+<div class="row mb-3 justify-content-center">
+    <div class="col-md-8 text-center">
+        <div class="input-group input-group-lg">
+            <input type="text" class="form-control form-control-lg" id="quickSearch" placeholder="Filter ... " > 
+            <div class="input-group-append">
+                <button class="btn btn-success" type="button" title="Search" alt="Search" id="goButton" >Search</button>
+                <a class="btn btn-outline-secondary filter" href="#" data-filter="">Reset</a>
+            </div>
         </div>
+        <span class="info2 h2"><span id="numberOf">{{ itemCount }}</span> of {{ itemCount }} items</span>
     </div>
-    </div>
-    {% endfor %}
 </div>
+
+<div id="loading" class="text-center">
+    <div class="spinner-border text-secondary" role="status"><span class="sr-only">Loading...</span></div>
+</div>
+
+<div class="row" id="browseItems"></div>
