--- a/_includes/tree.html
+++ b/_includes/tree.html
@@ -178,6 +178,18 @@
                   "url": "{{ '/browse.html#Indeterminate Teapot' | relative_url }}"
                 }
               ]
+            },
+            {
+              "name": "Other", "children": [
+                {
+                  "Category": "Tableware",
+                  "Type": "Other",
+                  "Form": "",
+                  "name": "Shoyu Sashi (spouted jar)",
+                  "Description": "A small spouted jar or jug used to serve shoyu, or soy sauce (Simpson et al. 2015:89).",
+                  "url": "{{ '/glossary/shoyu-sashi.html' | relative_url }}"
+                }
+              ]
             }
           ]
         },
