--- a/_includes/tree.html
+++ b/_includes/tree.html
@@ -36,40 +36,40 @@
                 {
                   "Category": "Tableware",
                   "Type": "Bowls/Cups",
-                  "Form": "Chawan",
-                  "name": "Chawan - Yunomi (teacup)",
+                  "Form": "茶碗 Chawan",
+                  "name": "茶碗 Chawan - 湯吞み Yunomi (teacup)",
                   "Description": "Teacups come in a  variety of sizes and range in shape from hemispherical to cylindrical (Costello et. al 2001:36).",
                   "url": "{{ '/glossary/yunomi-teacup.html' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
                   "Type": "Bowls/Cups",
-                  "Form": "Chawan",
-                  "name": "Chawan - Kobachi (small bowl)",
+                  "Form": "茶碗 Chawan",
+                  "name": "茶碗 Chawan - ⼩鉢 Kobachi (small bowl)",
                   "Description": "A bowl used for small portions of food or side dishes (Simpson et al. 1980:83).",
                   "url": "{{ '/glossary/kobachi-small-bowl.html' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
                   "Type": "Bowls/Cups",
-                  "Form": "Chawan",
-                  "name": "Chawan - Gohan Chawan (rice bowl)",
+                  "Form": "茶碗 Chawan",
+                  "name": "茶碗 Chawan - ご飯茶碗 Gohan Chawan (rice bowl)",
                   "Description": "Some researchers refer to these as rice/soup bowls because they could be used for either food (Bibb 2013:[10]; Costello et. al 2001:34).",
                   "url": "{{ '/glossary/gohan-chawan-rice-soup-bowl.html' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
                   "Type": "Bowls/Cups",
-                  "Form": "Chawan",
-                  "name": "Chawan - Futa (bowl lid)",
+                  "Form": "茶碗 Chawan",
+                  "name": "茶碗 Chawan - 蓋 Futa (bowl lid)",
                   "Description": "Bowl lids are shallow bowls that sit inside rice/soup bowl rims (Gorham 1971:185, 193).",
                   "url": "{{ '/glossary/futa-lid.html' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
                   "Type": "Bowls/Cups",
-                  "Form": "Chawan",
-                  "name": "Chawan - (indeterminate bowl)",
+                  "Form": "茶碗 Chawan",
+                  "name": "茶碗 Chawan - (indeterminate bowl)",
                   "Description": "Used when a more specific chawan form cannot be determined.",
                   "url": "{{ '/browse.html#indeterminate bowl' | relative_url }}"
                 },
@@ -77,7 +77,7 @@
                   "Category": "Tableware",
                   "Type": "Bowls/Cups",
                   "Form": "",
-                  "name": "Soba Choko (cold noodle cup)",
+                  "name": "そば猪⼝ Soba-Choko (cold noodle sauce cup)",
                   "Description": "A small cup for soba noodle sauce with a flat bottom and straight walls (Costello et. al 2001:36). ",
                   "url": "{{ '/glossary/soba-choko-cold-noodle-cup.html' | relative_url }}"
                 },
@@ -85,7 +85,7 @@
                   "Category": "Tableware",
                   "Type": "Bowls/Cups",
                   "Form": "",
-                  "name": "Donburi (large soup bowl)",
+                  "name": "丼鉢 Donburi Hachi (large soup bowl)",
                   "Description": "A large, deep bowl used for soup or don (Costello et. al 2001:35; Simpson et al. 1980:83).",
                   "url": "{{ '/glossary/donburi-large-soup-bowl.html' | relative_url }}"
                 }
@@ -97,7 +97,7 @@
                   "Category": "Tableware",
                   "Type": "Dish/Plate",
                   "Form": "",
-                  "name": "Kozara (small dish/plate)",
+                  "name": "⼩⽫ Kozara (small dish/plate)",
                   "Description": "Kozara are used to hold small portions of specialty foods. They sometimes have lids (Ross 2012:10).",
                   "url": "{{ '/glossary/kozara-small-dish.html' | relative_url }}"
                 },
@@ -105,31 +105,39 @@
                   "Category": "Tableware",
                   "Type": "Dish/Plate",
                   "Form": "",
-                  "name": "Nakazara (medium dish/plate)",
-                  "Description": "A nakazara is a shallow dish or plate with rim diameters between about 18 and 21 cm (Ross 2012:10; Simpson et al. 2014:87).",
+                  "name": "中⽫ Nakazara/Chuzara (medium dish/plate)",
+                  "Description": "A nakazara, also pronounced chuzara, is a shallow dish or plate with rim diameters between about 18 and 21 cm (Ross 2012:10; Simpson et al. 2014:87).",
                   "url": "{{ '/glossary/nakazara-medium-dish-plate.html' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
                   "Type": "Dish/Plate",
                   "Form": "",
-                  "name": "Hirabachi (large dish/plate)",
-                  "Description": "A larger serving dish with a shallow hollow profile (Simpson et al. 2014:87,90).",
-                  "url": "{{ '/glossary/hirabachi-large-dish-plate.html' | relative_url }}"
+                  "name": "⼤⽫ Ozara (large dish/plate)",
+                  "Description": "Ozara are large, shallow dish/plates with rims that are generally more than 21 cm in diameter (Simpson et al. 2014:87).",
+                  "url": "{{ '/glossary/ozara-large-dish-plate.html' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
                   "Type": "Dish/Plate",
                   "Form": "",
-                  "name": "Mamezara (sauce dish/plate)",
-                  "Description": "Mamezara are very small dishes for condiments or sweets (Walter 2012:128).",
+                  "name": "⾖⽫ Mamezara (sauce dish/plate)",
+                  "Description": "Mamezara are very small dishe/plates for condiments or sweets (Walter 2012:128).",
                   "url": "{{ '/glossary/mamezara-sauce-dish.html' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
                   "Type": "Dish/Plate",
                   "Form": "",
-                  "name": "Namasu-Zara (pickle dish/plate)",
+                  "name": "平鉢 Hirabachi (large dish/plate)",
+                  "Description": "A large serving dish with a deeper profile than an ozara (Simpson et al. 2014:87,90).",
+                  "url": "{{ '/glossary/hirabachi-large-dish-plate.html' | relative_url }}"
+                },
+                {
+                  "Category": "Tableware",
+                  "Type": "Dish/Plate",
+                  "Form": "",
+                  "name": "膾⽫ Namasu-Zara (pickle dish/plate)",
                   "Description": "Used for pickled vegetables, namasu-zara are a deep dishes with a large footring (Bibb 2013:[4]).",
                   "url": "{{ '/glossary/namasu-zara-pickle-dish-plate.html' | relative_url }}"
                 },
@@ -137,7 +145,7 @@
                   "Category": "Tableware",
                   "Type": "Dish/Plate",
                   "Form": "",
-                  "name": "Sara (indeterminate dish/plate)",
+                  "name": "⽫ Sara (indeterminate dish/plate)",
                   "Description": "General term for a dish/plate of an indeterminate size.",
                   "url": "{{ '/glossary/sara-indeterminate-dish-plate.html' | relative_url }}"
                 }
@@ -149,24 +157,24 @@
                   "Category": "Tableware",
                   "Type": "Teapots",
                   "Form": "",
-                  "name": "Kyusu (small teapot)",
-                  "Description": "These are smaller teapots designed for individual use that have a projecting side handle (Ross 2012:12).",
+                  "name": "急須 Kyusu (small teapot)",
+                  "Description": "These are small teapots designed for individual use that have a projecting side handle (Ross 2012:12).",
                   "url": "{{ '/glossary/kyusu-small-teapot.html' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
                   "Type": "Teapots",
                   "Form": "",
-                  "name": "Dobin (large teapot)",
-                  "Description": "Dobin are larger teapots with a detachable top handle used to serve tea at family meals (Cort 2000:230–231).",
+                  "name": "⼟瓶 Dobin (large teapot)",
+                  "Description": "Dobin are larger teapots that are often used to serve tea at family meals. They include a detachable top handle (Cort 2000:230–231).",
                   "url": "{{ '/glossary/dobin-teapot.html' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
                   "Type": "Teapots",
                   "Form": "",
-                  "name": "Teipotto (Western-style teapot)",
-                  "Description": "Teipotto are Western-style teapots with ceramic handles attached to the teapot side-body opposite a spout (Nakajima 1999:81).",
+                  "name": "ティーポット Tei-potto (Western-style teapot)",
+                  "Description": "Tei-potto are Western-style teapots with ceramic handles attached to the teapot side-body opposite a spout (Nakajima 1999:81).",
                   "url": "{{ '/glossary/teipotto-western-style-teapot.html' | relative_url }}"
                 },
                 {
@@ -185,7 +193,7 @@
                   "Category": "Tableware",
                   "Type": "Other",
                   "Form": "",
-                  "name": "Shoyu Sashi (soy sauce dispenser)",
+                  "name": "醤油差し Shoyu Sashi (soy sauce dispenser)",
                   "Description": "A small spouted jar or jug used to serve shoyu, or soy sauce (Simpson et al. 2015:89).",
                   "url": "{{ '/glossary/shoyu-sashi.html' | relative_url }}"
                 }
@@ -202,15 +210,15 @@
                     "Category": "Sake ware",
                     "Type": "Cups",
                     "Form": "",
-                    "name": "Ochoko (small sake cup)",
-                    "Description": "Many larger sake cups are within the size range for teacups and can be used for either beverage; ochoko are exclusively for sake (Leland E. Bibb 2015, elec. comm.).",
-                    "url": "{{ '/glossary/ochoko-small-sake-cup.html' | relative_url }}"
+                    "name": "盃 Sakazuki (small shallow sake cup)",
+                    "Description": "Sakazuki are smaller sake cups with a wide rim, shallow profile, and a footring.",
+                    "url": "{{ '/glossary/sakazuki-small-sake-cup.html' | relative_url }}"
                   },
                   {
                     "Category": "Sake ware",
                     "Type": "Cups",
                     "Form": "",
-                    "name": "Guinomi (large sake cup)",
+                    "name": "ぐい吞み Guinomi (large sake cup)",
                     "Description": "Guinomi sizes and shapes are variable but they generally have thin walls and often have everted rims (Ross 2012:10). The largest guinomi can overlap in size with smaller teacups.  ",
                     "url": "{{ '/glossary/guinomi-large-sake-cup.html' | relative_url }}"
                   },
@@ -218,9 +226,9 @@
                     "Category": "Sake ware",
                     "Type": "Cups",
                     "Form": "",
-                    "name": "Sakazuki (indeterminate sake cup)",
-                    "Description": "General term for a sake cup of indeterminate size/function.",
-                    "url": "{{ '/glossary/sakazuki-indeterminate-sake-cup.html' | relative_url }}"
+                    "name": "猪⼝ Choko (indeterminate sake cup)",
+                    "Description": "A general term for a sake cup of indeterminate size/function, choko are usually smaller than guinomi but come in a variety of shapes and sizes (Simpson et al. 2015:91).",
+                    "url": "{{ '/glossary/choko-indeterminate-sake-cup.html' | relative_url }}"
                   }
                 ]
             },
@@ -230,7 +238,7 @@
                   "Category": "Sake ware",
                   "Type": "Decanters",
                   "Form": "",
-                  "name": "Kampin Tokkuri (round decanter)",
+                  "name": "燗瓶徳利 Kampin Tokkuri (round decanter)",
                   "Description": "A kampin tokkuri is a decanter used to heat and serve sake that has a round body and tall neck (Cort 2000:231, 210).",
                   "url": "{{ '/glossary/kampin-tokkuri-round-decanter.html' | relative_url }}"
                 },
@@ -238,7 +246,7 @@
                   "Category": "Sake ware",
                   "Type": "Decanters",
                   "Form": "",
-                  "name": "Sorori Tokkuri (slender decanter)",
+                  "name": "曽呂利徳利 Sorori Tokkuri (slender decanter)",
                   "Description": "A tall, slender decanter used for heating and serving “thick, unrefined sake” (Cort 2000:231).",
                   "url": "{{ '/glossary/sorori-tokkuri-slender-decanter.html' | relative_url }}"
                 },
@@ -246,7 +254,7 @@
                   "Category": "Sake ware",
                   "Type": "Decanters",
                   "Form": "",
-                  "name": "Tokkuri (indeterminate sake decanter)",
+                  "name": "徳利 Tokkuri (indeterminate sake decanter)",
                   "Description": "General term for a sake decanter of indeterminate size/function.",
                   "url": "{{ '/glossary/tokkuri-sake-decanter.html' | relative_url }}"
                 }
