--- a/_includes/tree.html
+++ b/_includes/tree.html
@@ -210,7 +210,7 @@
                     "Category": "Sake ware",
                     "Type": "Cups",
                     "Form": "",
-                    "name": "盃 Sakazuki (small shallow sake cup)",
+                    "name": "盃 Sakazuki (small sake cup)",
                     "Description": "Sakazuki are smaller sake cups with a wide rim, shallow profile, and a footring.",
                     "url": "{{ '/glossary/sakazuki-small-sake-cup.html' | relative_url }}"
                   },
