change tokugawa to edo era

--- a/_layouts/timeline.html
+++ b/_layouts/timeline.html
@@ -3,7 +3,7 @@ layout: page
 ---
 
 {% assign items = site.data[site.metadata] %}
-{% assign eras = "Tokugawa (1603-1868);Early Meiji (1868-1885);Middle Meiji (1885-1895);Late Meiji (1895-1912);Taisho (1912-1926);Showa (1926-1989)" | split: ";" %}
+{% assign eras = "Edo (1603-1868);Early Meiji (1868-1885);Middle Meiji (1885-1895);Late Meiji (1895-1912);Taisho (1912-1926);Showa (1926-1989)" | split: ";" %}
 
 <style> .img-thumbnail { height: 200px; } </style>
 
