--- a/_includes/index/eras.html
+++ b/_includes/index/eras.html
@@ -3,7 +3,7 @@
     <h5 class="card-title">Eras</h5>
     <p class="card-text">
 
-      <a class="btn btn-sm btn-ponderosa-pine m-1" href="{{ '/timeline.html#tokugawa-1603-1868' | relative_url }}">Tokugawa</a>
+      <a class="btn btn-sm btn-ponderosa-pine m-1" href="{{ '/timeline.html#edo-1603-1868' | relative_url }}">Edo</a>
       <a class="btn btn-sm btn-ponderosa-pine m-1" href="{{ '/timeline.html#early-meiji-1868-1885' | relative_url }}">Meiji</a>
       <a class="btn btn-sm btn-ponderosa-pine m-1" href="{{ '/timeline.html#taisho-1912-1926' | relative_url }}">Taisho</a>
       <a class="btn btn-sm btn-ponderosa-pine m-1" href="{{ '/timeline.html#showa-1926-1989' | relative_url }}">Showa</a>
