--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,13 @@
 <meta http-equiv="Content-Language" content="en-us" >
 {% if page.layout == "item" %}{% include item-meta.html %}{% else %}{% include page-meta.html %}{% endif %}
 
-<link href="https://fonts.googleapis.com/css?family=Oswald:300,400" rel="stylesheet">
+{% if site.data.theme.font-cdn %}{{ site.data.theme.font-cdn }}
+{% elsif jekyll.environment == "production" %}
+<link href="https://www.lib.uidaho.edu/assets/css/uidaho-fonts.css" rel="stylesheet">
+{% else %}
+<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+{% endif %}
+
 <link rel="stylesheet" href="{{ '/css/bootstrap.min.css' | prepend: site.digital-assets }}" type="text/css">
 {% if page.layout == 'data' %}<link rel="stylesheet" type="text/css" href="{{ '/datatables/datatables.min.css' | prepend: site.digital-assets }}">{% endif %}
 {% if layout.gallery == true %}<link rel="stylesheet" href="{{ '/lightgallery/css/lightgallery.min.css' | prepend: site.digital-assets }}" type="text/css">{% endif %}
