--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,9 +4,8 @@
 @charset "utf-8";
 
 // base variables
-$base-font-family: "oswald","Ringside Narrow A", "Ringside Narrow B", Arial, sans-serif; 
-$base-font-size:   19px;
-$base-font-weight: 300;
+$base-font-family: 'Public Sans', sans-serif; 
+$base-font-size:   1em;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
@@ -62,7 +61,7 @@ $on-laptop:        800px;
     }
 }
 
-@import "custom", "uidahofonts","colors";
+@import "custom", "colors";
 
 //@import "base";
 //@import "layout";
