quick theme update

--- a/_includes/collection-nav.html
+++ b/_includes/collection-nav.html
@@ -1,21 +1,36 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#page-nav" aria-controls="page-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="d-md-none float-right">
-            <a id="digleft" title="University of Idaho Library Digital Initiatives" class="btn btn-light p-1 border-secondary" data-toggle="modal" data-target="#collections">
-            <img id="digleft" class="img-fluid" src="https://www.lib.uidaho.edu/digital/justdi_logo_sm.png" alt="digital initiatives logo" ></a>
-        </div>
+        <span class="d-lg-none text-right">
+            <a role="button" class="btn btn p-1 float-right" href="{{ site.organization-link }}" target="_blank" rel="noopener">
+                <img class="img-fluid float-right" id="mobile-nav-image" src="https://www.lib.uidaho.edu/media/digital/liblogo_white.png" alt="University of Idaho Library Digital Initiatives collections" >
+            </a>
+        </span>
 
         <div class="collapse navbar-collapse" id="page-nav">
             <ul class="navbar-nav mr-auto">
-                {% for nav in site.data.nav-configuration %}
+                {%- assign navItems = site.data.config-nav | where_exp: 'item', 'item.dropdown_parent == nil' -%} 
+                {% for nav in navItems %}
+                {% if nav.stub %}
                 <li class="nav-item {% if page.url == nav.stub %}active{% endif %}">
-                    <a class="nav-link" href="{{ nav.stub | relative_url }}">{{ nav.display-text }}</a>
+                    <a class="nav-link " href="{{ nav.stub | relative_url }}">{{ nav.display_name }}</a>
                 </li>
-                {% endfor %}
+                {%- else -%}
+                <li class="nav-item dropdown">
+                    {% assign navChildren = site.data.config-nav | where_exp: 'item', 'item.dropdown_parent == nav.display_name' %}
+                    {%- assign childStubs = navChildren | map: 'stub' -%}
+                    <a class="nav-link  dropdown-toggle{% if childStubs contains page.url %} active{% endif %}" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ nav.display_name }}</a>
+                    <div class="dropdown-menu">
+                        {% for c in navChildren %}
+                        <a class="dropdown-item {% if page.url == c.stub %}active{% endif %}" href="{{ c.stub | relative_url }}">{{ c.display_name }}</a>
+                        {% endfor %}
+                    </div>
+                </li>
+                {% endif %}
+                {%- endfor -%}
             </ul>
             {% include nav-search-site.html %}
         </div>
