--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -61,7 +61,7 @@ $on-laptop:        800px;
     }
 }
 
-@import "custom", "colors";
+@import "base", "custom", "colors";
 
 //@import "base";
 //@import "layout";
