--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -1,15 +1,13 @@
 <div class="container">
     <div class="row align-items-center">
-        <div class="col-md-9">
-            <div class="row">
-            <div id="title" class="col-11" >
-                <h1><a href="{{ site.baseurl }}/" >{{ site.title }}</a></h1>	 
-                <p>{{ site.tagline }}</p>
-            </div></div>
+        <div id="title" class="col-md-9">
+            <h1><a class="text-dark font-weight-normal" href="{{ '/' | relative_url }}" >{{ site.title }}</a></h1>	 
+            {% if site.tagline %}<p>{{ site.tagline }}</p>{% endif %}
         </div>
-        <div class="col-md-3 d-none d-md-block text-right">
-            <button type="button" class="btn btn-outline-light" data-toggle="modal" data-target="#collections">
-            <img class="img-fluid" src="https://www.lib.uidaho.edu/media/digital/justdi_logo_sm.png" title="University of Idaho Library Digital Initiatives" alt="digital initiatives logo" ></button>
+        <div class="col-md-3 d-none d-lg-block text-right p-3">
+            <a href="https://www.lib.uidaho.edu/digital/" target="_blank" rel="noopener">
+                <img class="img-fluid" src="https://www.lib.uidaho.edu/media/images/ui_library_horizontal.png" title="University of Idaho Library Digital Initiatives Collections" alt="University of Idaho Library Digital Initiatives Collections" >
+            </a>
         </div>
     </div>
 </div>
