fix uidaho links in about

--- a/_includes/aboutsidebar.html
+++ b/_includes/aboutsidebar.html
@@ -2,7 +2,7 @@
     <div class="card-header background-grey">Partners</div>
     <div class="card-body text-center">
         <p class="mx-2 my-2">
-            <a href="http://webpages.uidaho.edu/aacc/index.htm" target="_blank">
+            <a href="https://web.archive.org/web/20240707204510/https://www.uidaho.edu/class/anthrolab/collections/aacc" target="_blank">
                 <img src="{{ site.objects }}/aacc-postcard.png" class="img-fluid" alt="Asian American Comparative Collection">
             </a>
         </p>
@@ -24,7 +24,7 @@
         <p class="card-text">Many of the artifacts on this site are from the
             <em>Asian American Comparative Collection</em> (AACC) at the University of Idaho. More examples of artifacts held in this collection
             can be seen at the
-            <a href="http://webpages.uidaho.edu/aacc/illus.htm" target="_blank">AACC Artifact Illustrations page</a>.</p>
+            <a href="https://web.archive.org/web/20241220081731/https://www.uidaho.edu/class/anthrolab/collections/aacc/id" target="_blank">AACC Artifact Illustrations page</a>.</p>
         <p class="card-text">
             <em>Japanese Gulch Village</em> artifacts are part of the
             <a href="http://www.burkemuseum.org/research-and-collections/culture"
